Realize DAO classes logic with JPA, rework service classes for using with JPA DAOs, add tests